--- a/index.html
+++ b/index.html
@@ -38,6 +38,113 @@
     <h2>Our Mission to Solve with Technology, Not Just Sell It.</h2> <br>
     <p>We're here to create meaningful, functional tech — helping businesses streamline, scale, and stay ahead through innovation that works.</p>
   </div>
+   <!-- Rounded purple card overlapping below -->
+  <section class="mission-container">
+    <div class="mission-card" id="missionCard">
+      <div class="badge">🚀</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">Innovation and Expertise at the Heart of Everything We Do!!</span> 
+        </h1>
+        <p class="description">
+          At our core, we blend innovation and expertise to fuel every project, striving to pioneer digital solutions that redefine success.
+        </p>
+      </div>
+    </div> <br>
+    <div class="mission-card" id="missionCard">
+      <div class="badge">🌎</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">Navigating the Agency Evolution</span> 
+        </h1>
+        <p class="description">
+          From humble beginnings to remarkable achievements, we've embarked on a journey fueled <br>by passion, innovation, and a relentless <br>drive for excellence..
+        </p>
+      </div>
+    </div>
+  <div class="mission-card" id="missionCard">
+      <div class="badge">⚡</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">Core Values of Excellence</span> 
+        </h1>
+        <p class="description">
+          At Unsquare, excellence, innovation, and <br> integrity drive us. Collaboration, adaptability, and client-centricity <br> 
+          define our culture, ensuring success.
+        </p>
+      </div>
+    </div>  
+  <!--leaving space for pending work*-->
+  <div class="mission-card" id="missionCard">
+      <div class="badge">🏆</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">Meet Our Collaborators</span> 
+        </h1>
+        <img src="https://pic.pikbest.com/00/93/42/80C888piCtun.jpg!bew340" alt="Game image">
+      </div>
+    </div> 
+     <div class="mission-card" id="missionCard">
+      <div class="badge">🌐</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">Website Development </span> 
+        </h1>
+        <p class="description">
+          Crafting responsive, user-friendly websites <br>
+           tailored to your brand's unique needs, <br>
+           ensuring seamless experiences and driving results."
+        </p>
+      </div>
+    </div> 
+      <div class="badge">💻</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">App Development </span> 
+        </h1>
+        <p class="description">
+         Developing innovative mobile applications for <br> 
+         iOS and Android, designed to engage your <br>
+          audience and expand your business's reach.
+        </p>
+      </div>
+    </div> 
+  <div class="mission-card" id="missionCard">
+      <div class="badge">📦</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent">E-commerce Stores</span> 
+        </h1>
+        <p class="description">
+          Building robust and scalable online stores that maximize sales and <br>
+           provide a seamless shopping experience for your customers.
+        </p>
+      </div>
+    </div> 
+    <div class="mission-card" id="missionCard">
+      <div class="badge">⚙️</div>
+      <div class="content">
+        <h1 class="title">
+       <span class="accent"> WhatsApp Automation</span> 
+        </h1>
+        <p class="description">
+          Implementing automated WhatsApp solutions to streamline <br>
+           communication, enhance customer service, and drive sales.
+        </p>
+      </div>
+    </div> 
+      </section>
+      <section class="mission-container">
+        <div class="mission-card" id="missionCard">
+          <div class="badge">🎧</div>
+          <div class="content">
+            <h1 class="title">
+            <span class="accent">Continuous Care for Triumph</span>
+            </h1>
+          </div>
+        </div>
+      </section>
 <script src="script.js"></script>
 </body>
 </html>
+ 
